--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -33,8 +33,7 @@
         </activity>
         <activity android:name=".ui.LoginActivity" />
         <activity android:name=".auth.OauthActivity"/>
-        <activity android:name=".ui.LastCommitDetailsActivity"
-            android:parentActivityName=".ui.GithubPagerActivity" />
+        <activity android:name=".ui.LastCommitDetailsActivity" />
         <activity android:name=".ui.SettingsActivity"
             android:parentActivityName=".ui.GithubPagerActivity" />
         <activity android:name=".ui.RepoReadmeActivity" />
